--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ main{
 }
 
 body{
-    background-color: #ffffff;
+    background-color: #bd3b3b;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
