--- a/index.css
+++ b/index.css
@@ -2,38 +2,49 @@
 	Styles
 */
 
+h1{
+    font-size: 24px;
+    font-weight: bold;
+    color: rgb(63, 66, 66);
+}
 main{
     text-align: center;
     color: azure;
 }
 
 body{
-    background-color: #b6b6b6;
+    background-color: #eeeeee;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
 
-
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
     overflow: hidden;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(40, 56, 68);
 }
 
 li {
     float: left;
-    padding-left: 15%;
-    padding-top: 1%;
-    padding-bottom: 1%;
+}
+
+.contact_btn{
+    float:right;
 }
 
 li a {
+    display: block;
     color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover {
+li a:hover:not(.active) {
     background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
 }
